# VoxAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docs/: admin-bootstrap.md  runtime-invariants.md
docs/: admin-bootstrap.md  api-reference.md  architecture.md  deployment-checklist.md  e2e-testing.md  getting-started.md  operator-runbook.md  runtime-invariants.md
migrations/: 001_initial.sql  002_add_tenant_password.sql  003_visitor_memory_and_webhooks.sql  004_control_plane_security.sql  005_jobs.sql  006_knowledge_pipeline.sql  007_conversation_events.sql  008_job_resilience.sql
tests/: conftest.py
tests/integration/: test_phase0_guards.py  test_queries.py  test_rag_pipeline.py  test_voice_pipeline.py
tests/load/: test_operational_readiness.py
tests/security/: test_input_validation.py
tests/unit/: test_agent_core.py  test_agent_tools.py  test_analytics_routes.py  test_auth.py  test_chunker.py  test_handoff.py  test_jobs_runner.py  test_knowledge_engine.py  test_knowledge_routes.py  test_lead_routes.py  test_leads_extraction.py  test_llm_factory.py  test_logging_config.py  test_mcp.py  test_metrics.py  test_rate_limit_middleware.py  test_rate_limiter.py  test_stt_factory.py  test_tenant_routes.py  test_tts_factory.py  test_visitor_memory.py  test_webhooks.py
voxagent/: __init__.py  config.py  db.py  leads.py  logging_config.py  main.py  memory.py  metrics.py  models.py  queries.py  webhooks.py
voxagent/agent/: __init__.py  core.py  handoff.py  mcp.py  tools.py
widget/: Dockerfile  package.json
(+38 files in other folders)
